--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -89,19 +89,21 @@ label {
 
 #banner {
   float: left;
-  width: 513px;
+  width: 450px;
   height: 400px;
   padding: 20px 0px 0px 40px; }
   #banner h2 {
     margin-bottom: 5px; }
   #banner p {
     margin-top: 5px; }
+  #banner .marketing-copy {
+    margin-left: 36px; }
   #banner .easy-button {
     color: white !important;
     font-size: 18px;
     line-height: 24px;
     text-decoration: none;
-    margin: 80px 0px 0px 50px; }
+    margin: 20px 0px 0px 00px; }
   #banner .images {
     padding-top: 20px; }
 
@@ -157,7 +159,7 @@ label {
 #signup-box {
   float: left;
   width: 346px;
-  padding-top: 20px; }
+  padding-top: 80px; }
   #signup-box h2 {
     margin-bottom: 5px; }
   #signup-box p {
