Front page copy tweak. Closes #571

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -19,7 +19,7 @@ script type="text/javascript" src="http://yomobi.com/javascripts/mobile-redirect
         li Interactive maps
         li Social media integration
         li Easily customizable content
-        li Instant messaging
+        li Subscriber notification
       a.pretty-button.easy-button href=new_user_registration_path Sign&nbsp;Up
 
 #signup-box
