Updated redirect help link in welcome email. Closes #560

--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -6,7 +6,7 @@ Your mobile site URL is: <a href="<%= URI.encode @mobile_url %>"><%= @mobile_url
 <br />
 <br />
 
-Use your YoMobi mobile site to complement your existing desktop site. <a href="http://yomobi.com">Click here for instructions</a> on how to seamlessly direct visitors to your new mobile site whenever they visit from a mobile device.
+Use your YoMobi mobile site to complement your existing desktop site. <a href="http://help.yomobi.com/Account/MobileRedirectScript">Click here for instructions</a> on how to seamlessly direct visitors to your new mobile site whenever they visit from a mobile device.
 <br />
 <br />
 
