--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,7 +10,7 @@ script type="text/javascript" src="http://yomobi.com/javascripts/mobile-redirect
     img.lfloat src="/images/home-phone.png"
     .marketing-copy.lfloat
       p.line-1 YoMobi makes building a mobile site easy.
-      p.line-2 Go from signing up to online in 4 minutes.
+      p.line-2 Go from sign up to online in 4 minutes.
       p.line-3 Features include:
       ul
         li No sign up costs
