--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -289,7 +289,7 @@
     .input-wrap
       p Enter your call back information:
       = form_tag "/#{@company.db_name}/call_back/submit", :method => 'post' do
-        label Name::
+        label Name:
         br
         input type="text" name="name"
         br
