--- a/app/views/layouts/mobile_basic.slim
+++ b/app/views/layouts/mobile_basic.slim
@@ -10,7 +10,8 @@ html lang="en-US"
     #mobile-container
       #header
         .content
-          a#logo href=root_path YoMobi
+          a#logo href=root_path
+            img src="/images/yomobi-logo-32.png"
       #main-content
         = yield
 
