All yomobi urls should be prepended with www

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,5 +1,5 @@
 script type="text/javascript" var _RSITE = 'http://www.yomobi.com/yomobi';
-script type="text/javascript" src="http://yomobi.com/javascripts/mobile-redirect.js"
+script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redirect.js"
 
 #banner
   h2 = t 'home_page.banner.title'
