--- a/app/views/user_mailer/leave_msg.html.erb
+++ b/app/views/user_mailer/leave_msg.html.erb
@@ -14,5 +14,5 @@ Message: <%= @params[:customer_feedback] %>
 
 Thank You,
 <br />
-<a href="http://yomobi.com">YoMobi</a>
+<a href="http://www.yomobi.com">YoMobi</a>
 <br />
