--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -14,7 +14,7 @@ Now that you're mobilized, <a href="http://www.sharethis.com/share?publisher=780
 <br />
 <br />
 
-To access your YoMobi account, <a href="http://yomobi.com/">click here</a> and sign in.
+To access your YoMobi account, <a href="http://www.yomobi.com/">click here</a> and sign in.
 <br />
 <br />
 
