--- a/app/views/layouts/mobile.slim
+++ b/app/views/layouts/mobile.slim
@@ -15,7 +15,7 @@ html lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com
       = yield
     
     = render 'shared/templates'
-    
+    script src="https://raw.github.com/douglascrockford/JSON-js/master/json2.js" type="text/javascript"
     = javascript_include_tag 'support/jquery-1.6.2.min'
     / = javascript_include_tag 'support/jquery.animate-enhanced.min'
     = javascript_include_tag 'support/underscore'
