--- a/app/views/user_mailer/booking_email.html.erb
+++ b/app/views/user_mailer/booking_email.html.erb
@@ -16,5 +16,5 @@ Date: <%= @params[:date] %>
 
 Thank You,
 <br />
-<a href="http://yomobi.com">YoMobi</a>
+<a href="http://www.yomobi.com">YoMobi</a>
 <br />
