--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -27,6 +27,13 @@ body {
 a img {
   border: none; }
 
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em;
+}
+
 #mobile-container {
   position: relative;
   width: $dynamic-width;
