--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -28,8 +28,8 @@ a img {
   border: none; }
 
 p {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
 }
