--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -5,6 +5,12 @@ body {
 a img {
   border: none; }
 
+p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-margin-before: 0em;
+  -webkit-margin-after: 0em; }
+
 #mobile-container {
   position: relative;
   width: 320px;
