Added css for ".input-wrap p" element to fix problem created by remove the space above and below for regular p elements in an earlier change.

--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -11,6 +11,9 @@ p {
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em; }
 
+.input-wrap p {
+  margin-bottom: 1em; }
+
 #mobile-container {
   position: relative;
   width: 320px;
