--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -187,7 +187,8 @@ p {
   display: none; }
 
 #aritcaptcha-container {
-  height: 60px; }
+  height: 60px;
+  margin-bottom: 4px; }
   #aritcaptcha-container input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; }
