--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -213,6 +213,7 @@ p {
 
 #aritcaptcha-container {
   height: 60px;
+  margin-bottom:4px;
   input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; } }
