Fixed a bug where mobile captchas would sometimes not show up. Closes #7
This happened when you accessed a second-page from somewhere else besides the home page.

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -279,7 +279,7 @@
         br
         label Message Content:
         textarea name="feedback" rows=5
-        #aritcaptcha-container
+        .aritcaptcha-container
         p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
@@ -301,7 +301,7 @@
         br
         textarea name="message" rows=5 cols=30
         br
-        #aritcaptcha-container
+        .aritcaptcha-container
         p.error.response
         br
         input(type="submit" value="Send")
@@ -364,7 +364,7 @@
         | &nbsp;&frasl;&nbsp;
         = select_tag 'date_y', options_for_select(2011..2012,Date.today.year)
         br
-        #aritcaptcha-container
+        .aritcaptcha-container
         p.error.response
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
@@ -392,7 +392,7 @@
         = select_tag 'carrier', options_for_select(carrier_names,'AT&T')
         br
         | <% } %>
-        #aritcaptcha-container
+        .aritcaptcha-container
         p.response.error
         input(type="submit" value="Send")
     .thanks-wrap style="display:none"
