--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -211,7 +211,7 @@ p {
 #templates {
   display: none; }
 
-#aritcaptcha-container {
+.aritcaptcha-container {
   height: 60px;
   margin-bottom:4px;
   input[type=text] {
