--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -186,10 +186,10 @@ p {
 #templates {
   display: none; }
 
-#aritcaptcha-container {
+.aritcaptcha-container {
   height: 60px;
   margin-bottom: 4px; }
-  #aritcaptcha-container input[type=text] {
+  .aritcaptcha-container input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; }
 
