Added google tracking code. Closes #8

--- a/app/views/signup/default/step-1.slim
+++ b/app/views/signup/default/step-1.slim
@@ -50,3 +50,21 @@
     $(function () {
       $('.help-bubble').simpletooltip(undefined,'help');
     })
+  erb:
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 1016498762;
+    var google_conversion_language = "en";
+    var google_conversion_format = "3";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "Rjg7CMbcoAIQypTa5AM";
+    var google_conversion_value = 0;
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+    <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/1016498762/?label=Rjg7CMbcoAIQypTa5AM&amp;guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
