--- a/app/views/shared/_mobile-data-loader.html.erb
+++ b/app/views/shared/_mobile-data-loader.html.erb
@@ -5,7 +5,7 @@ window.g = {
   width: 320,
   height: 480,
   topBarHeight: 0,
-  topBarMaxHeight: 256,
+  topBarMaxHeight: <%= @is_preview_mode ? 125 : 256 %>,
   couchLocation: '<%=escape_javascript @company.couch_host %>',
   db_name: '<%=escape_javascript @company.db_name %>',
   company: '<%=escape_javascript @company.name %>'
