--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -271,7 +271,7 @@ p {
       font-weight: bold; } } }
 
 .page .content.category, .page .content.page_tree {
-  padding: 0 0 20px 0 !important;
+  padding: 0 15px 20px 5px !important;
   .item {
     padding: 16px 45px 16px 12px;
     font-size: 16px;
@@ -295,8 +295,7 @@ p {
     border-top: 1px solid #b3b3b3;
     background: #dddddd;
     margin: 0; }
-  .leaf-content, h3 {
-    padding: 0 10px; } }
+  }
 
 .page .content.category {
   .name {
