--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -101,6 +101,8 @@ div.wysiwyg ul.toolbar {
   #content h1 {
     padding-left: 10px;
     margin: 3px 0px 3px 0px; }
+  #content .leaf-content h1 {
+    padding-left: 0px; }
 
 .ad-bar {
   display: none !important; }
