--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -109,7 +109,8 @@ div.wysiwyg ul.toolbar {
   width: $content-width - 2px - 1px;
   h1 {
     padding-left: 10px;
-    margin: 3px 0px 3px 0px; } }
+    margin: 3px 0px 3px 0px; }
+  .leaf-content h1 { padding-left: 0px; } }
 
 // builder related
 
