--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -71,7 +71,7 @@ input[type=checkbox] {
 
 .explanation {
   background: #e4edf8; 
-  padding: 8px 8px 0;
+  padding: 8px 8px 8px;
   margin-bottom: 18px;
   border: 1px solid #ccc;
 }
