--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -273,7 +273,7 @@ p {
 .page .content.category, .page .content.page_tree {
   padding: 0 15px 20px 5px !important;
   .item {
-    padding: 16px 45px 16px 12px;
+    padding: 16px 0px 16px 12px;
     font-size: 16px;
     & > div { padding-bottom: 2px; }
     img {
@@ -281,10 +281,11 @@ p {
       max-width: 290px; }
   }
   .item.category {
-    background: url(/images/ui/subcat-arrow.png) 97% 50% no-repeat; }
+    background: url(/images/ui/subcat-arrow.png) 99% 50% no-repeat; }
   .item.leaf-name {
-    background: url(/images/ui/subcat-arrow.png) 97% 50% no-repeat; }
+    background: url(/images/ui/subcat-arrow.png) 99% 50% no-repeat; }
   .item.category, .item.leaf-name {
+    padding: 16px 45px 16px 12px;
     cursor: pointer; }
   .item:first-child, .category:first-child {
     border-top: none; }
@@ -332,6 +333,7 @@ p {
 }
 
 pre {
+  margin-bottom: 0px;
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -pre-wrap;
