--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -30,5 +30,7 @@ _.templateSettings.interpolate = /\{\{([^\{].*?)\}\}/g;
 bdata = <%= raw widget_docs %>;
 
 bhelp = <%=raw help_texts %>;
+bmeta = <%=raw widget_meta %>;
+bicons = <%=raw widget_icons %>;
 
 </script>
