--- a/app/views/shared/_category-templates.slim
+++ b/app/views/shared/_category-templates.slim
@@ -201,31 +201,33 @@ script.menu-item type="text/template"
   .item class="{{ cycle }}"
     .name {{ item.name }}
     .price {{ item.price }}
-    .clearfix
+    .clearfix = ""
     pre.desc {{ item.desc }}
 
 script.services-item type="text/template"
   .item class="{{ cycle }}"
     .name {{ item.name }}
     .price {{ item.price }}
-    .clearfix
+    .clearfix = ""
     pre.desc {{ item.desc }}
 
 script.products-item type="text/template"
   .item class="{{ cycle }}"
     .name {{ item.name }}
     .price {{ item.price }}
-    .clearfix
+    .clearfix = ""
     pre.desc {{ item.desc }}
 
 script.property-listings-item type="text/template"
   .item class="{{ cycle }}"
     .name.long {{ item.name }}
-    .clearfix
+    .clearfix = ""
     div {{ item.price }}
     
+    | <% if (item.address) { %>
     div
       a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
+    | <% } %>
 
     | <% if (item.photo_url) { %>
     div
@@ -243,11 +245,17 @@ script.property-listings-item type="text/template"
 script.locations-item type="text/template"
   .item class="{{ cycle }}"
     .name.long {{ item.name }}
-    .clearfix
+    .clearfix = ""
+    | <% if (item.phone) { %>
     div
       a href="tel:{{ item.phone }}" {{ item.phone }}
+    | <% } %>
+
+    | <% if (item.address) { %>
     div
       a href="http://maps.google.com/maps?q={{ item.address }}" target="_blank" {{ item.address }}
+    | <% } %>
+
     pre.desc.long {{ item.desc }}
 
 / this represents a page in the page_tree list view
