--- a/public/stylesheets/mobile.css
+++ b/public/stylesheets/mobile.css
@@ -245,6 +245,8 @@ p {
     font-size: 16px; }
     .page .content.category .item > div, .page .content.page_tree .item > div {
       padding-bottom: 2px; }
+    .page .content.category .item > :empty, .page .content.page_tree .item > :empty {
+      padding: 0; }
     .page .content.category .item img, .page .content.page_tree .item img {
       max-height: 290px;
       max-width: 290px; }
