Removed State / City / Province requirement from gmap widget. Closes #19

--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -517,7 +517,7 @@
     label City*:
     input name="city" type="text" value="{{ _maybe.city }}"
     br
-    label State / Province / Territory*:
+    label State / Province / Territory:
     input name="state" type="text" value="{{ _maybe.state }}"
     br
     label Zip / Postal Code:
